--- a/src/main/resources/assets/creeplets/lang/en_us.json
+++ b/src/main/resources/assets/creeplets/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "entity.creeplets.creeplet": "\u00a7aCreeplet"
+    "entity.creeplets.creeplet": "\u00a7aCreeplet",
+    "item.creeplets.creeplet_spawn_egg": "\u00a7aCreeplet Spawn Egg"
 }
