--- a/src/main/resources/assets/creeplets/lang/en_us.json
+++ b/src/main/resources/assets/creeplets/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "entity.creeplets.creeplet": "Creeplet"
+  "entity.creeplets.creeplet": "Creeplet",
+  "item.creeplets.creeplet_spawn_egg": "Creeplet Spawn Egg"
 }
