Create item "Unstable Gunpowder"

--- a/src/main/resources/assets/creeplets/lang/en_us.json
+++ b/src/main/resources/assets/creeplets/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "entity.creeplets.creeplet": "Creeplet",
-  "item.creeplets.creeplet_spawn_egg": "Creeplet Spawn Egg"
+  "item.creeplets.creeplet_spawn_egg": "Creeplet Spawn Egg",
+  "item.creeplets.unstable_gunpowder": "Unstable Gunpowder"
 }
